# phonikud-StyleTTS2-dockerized

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  tts.py
templates/: index.html
