[project]
name = "phonikud-styletts2-dockerized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-restx>=1.3.0",
    "phonikud",
    "phonikud-onnx>=1.0.4",
    "soundfile>=0.13.1",
    "stts2-light",
]

[tool.uv.sources]
stts2-light = { path = "StyleTTS2-lite" }
phonikud = { git = "https://github.com/thewh1teagle/phonikud" }
